welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: reassignment to val
	if ( a=10 || b = 10){
              ^makes10:6: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (  a + b  = 10 ){
                ^